.provarCaches/00D6C0000000xA6UAI/objects/NSSCCConnector__SCC_LogDetail__c.object
<CustomObject>
    <description>Log entries per log</description>
    <fields>
        <fullName>NSSCCConnector__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__LogId__c</fullName>
        <description>Parent Log Id</description>
        <label>Log</label>
        <referenceTo>NSSCCConnector__SCC_Log__c</referenceTo>
        <relationshipLabel>Log Details</relationshipLabel>
        <relationshipName>Log_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Loglevel__c</fullName>
        <label>Loglevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>MONITOR</fullName>
                </value>
                <value>
                    <fullName>FATAL</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Done OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__WorstLogLevel__c</fullName>
        <label>WorstLogLevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>MONITOR</fullName>
                </value>
                <value>
                    <fullName>FATAL</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Detail</label>
    <nameField>
        <label>Log Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>